apps/downloads/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: downloads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.4.0
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
        - name: exportarr-prowlarr
          image: ghcr.io/onedr0p/exportarr:v2.0.0
          args:
            - prowlarr
          ports:
            - containerPort: 9707
              name: metrics
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: tun-device
          hostPath:
            path: /dev/net/tun
            type: CharDevice
