apps/downloads/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: downloads
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
    - name: metrics
      port: 9707
      targetPort: 9707
  type: ClusterIP
