apps/downloads/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: downloads
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.phoenyxlab.xyz
  rules:
    - host: prowlarr.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
